# tmux-key2pane

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/: key2pane.py
src/key2pane/: __main__.py  cli.py  settings.py  tmux.py
tests/: conftest.py  helpers.py  paths.py  test_cli.py  test_config.json  test_config.py  test_config_reset.json  test_integration.py  test_main.py  test_pane.py  test_parser.py  test_settings.py  test_tmux.py
