[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["key2pane"]

[project]
authors = [ {name = "BartSte"} ]
classifiers = [ "Programming Language :: Python :: 3", ]
dependencies = []
description = "Send keys to any tmux pane"
keywords = ["tmux", "key", "send", "pane", "keys", "send-keys", "send-keys-to-pane", "send-keys-to-pane"]
license = {text = "MIT License"}
name = "key2pane"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"

[project.optional-dependencies]
dev = ["pytest", "ipdb", "ipython"]

[project.scripts]
key2pane = "key2pane.__main__:main"

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    ".git",
    ".pytest_cache",
    "extras",
]
ignore = []
defineConstant = {}
stubPath = "stubs"
venvPath = ".venv"

reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedCallResult = false

pythonVersion = "3.13"
pythonPlatform = "Linux"

[tool.ruff]
line-length = 79

select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "N",  # PEP8 naming
]

ignore = ["D212", "D205", "D210", "D203"]

[tool.autopep8]
max_line_length = 79
aggressive = 3
experimental = true

[tool.pytest.ini_options]
addopts = "-s -rA --log-level INFO"
pythonpath = [
  "."
]
testpaths = [
    "tests"
]

[tool.ipdb]
context = 9

